--- a/personal_website/src/components/styles/nav.css
+++ b/personal_website/src/components/styles/nav.css
@@ -7,15 +7,18 @@ nav {
 }
 
 ul {
+    display: flex;
+    flex-direction: row;
     list-style-type: none;
+    justify-content: space-around;
+    align-items: center;
     margin: 0;
     padding: 0;
 }
 
 li {
-    float: left;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
 }
